# MSCNProblem

./: CMakeLists.txt  README.md
include/: Const.h  DiffEvol.h  Individual.h  Matrix.h  MscnProblem.h  Optimizer.h  Problem.h  ProblemFileReader.h  ProblemFileWriter.h  Random.h  RandomSearch.h  Table.h  Timer.h
src/: DiffEvol.cpp  Individual.cpp  MscnProblem.cpp  Random.cpp  RandomSearch.cpp  main.cpp
txt/: diffSolution.txt  openTest.txt  problem2.txt  random.txt  randomSolution.txt  solution.txt
